--- a/platformio.ini
+++ b/platformio.ini
@@ -519,3 +519,16 @@ platform_packages = ${common.platform_packages}
 board_build.ldscript = ${common.ldscript_2m512k}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266} -D USE_APA102 #-D CLKPIN=0 -D DATAPIN=2
+
+# ------------------------------------------------------------------------------
+# MCQN controller board configurations
+# ------------------------------------------------------------------------------
+
+[env:my-babys-got-led]
+board = esp_wroom_02
+platform = ${common.platform_wled_default}
+platform_packages = ${common.platform_packages}
+board_build.ldscript = ${common.ldscript_4m1m}
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp8266} -D USERMOD_WIFI_STATUS -D USERMOD_MQTT_CONNECTION_STATUS -D USERMOD_FACTORY_RESET
+
